# rag-hybrid-search

./: .dockerignore  .env.example  .gitignore  DEMO.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/raw/ferry_docs/: 01-overview.md  02-quickstart.md  03-configuration.md  04-error-codes.md  05-rate-limits.md  06-architecture.md  README.md
eval/: __init__.py  compare.py  metrics.py  run_eval.py
eval/golden/: SCHEMA.md  golden_set.jsonl
eval/reports/: comparison.md  eval_chunking_fixed.json  eval_chunking_recursive.json  eval_chunking_semantic.json  eval_dense.json  eval_hybrid.json
scripts/: ingest.py  seed.py
src/rag/: __init__.py  config.py  pipeline.py
src/rag/api/: main.py  schemas.py
src/rag/generation/: __init__.py  citations.py  confidence.py  llm_client.py  prompts.py
src/rag/indexing/: __init__.py  bm25_index.py  embeddings.py  vector_store.py
src/rag/ingestion/: __init__.py  chunkers.py  dedup.py  loaders.py  normalizer.py
src/rag/observability/: __init__.py  metrics.py  trace_store.py
src/rag/retrieval/: __init__.py  dense.py  fusion.py  rerank.py  sparse.py
tests/: test_api.py  test_bm25.py  test_chunkers.py  test_citations.py  test_compare.py  test_confidence.py  test_config.py  test_dedup.py  test_fusion.py  test_ingestion_corpus.py  test_loaders.py  test_metrics.py  test_observability.py  test_pipeline.py  test_retrieval.py
tests/fixtures/: sample.html  sample.md  sample.txt
ui/: app.py
